# SDL_ext

./: .gitignore  CMakeLists.txt  README.md
example/: basic.c  info.cpp
hdr/SDL2/: SDL_ext.h
macos/: TemplateInfo.plist
resource/licenses/: IPA_Font_License_Agreement_v1.0.txt
src/: SDL_ext.c
